--- a/scss/utils/_placeholders.scss
+++ b/scss/utils/_placeholders.scss
@@ -28,3 +28,9 @@
   cursor: not-allowed;
   opacity: 0.4;
 }
+
+%mobile-full-width {
+  @media #{$phone} {
+    width: 100%;
+  }
+}
